[gd_scene load_steps=18 format=3 uid="uid://jp28mtpnny3x"]

[ext_resource type="Texture2D" uid="uid://3nlr0fcynr1i" path="res://assets/pixel_horse.png" id="1_1iinc"]
[ext_resource type="Script" uid="uid://csa5rah6cplxb" path="res://scenes/horse_racing.gd" id="1_ivqbp"]
[ext_resource type="Texture2D" uid="uid://ceehrbm73r3b8" path="res://assets/finishLine.png" id="3_afx7c"]
[ext_resource type="Texture2D" uid="uid://dv8ddovoh6b05" path="res://assets/skybox.png" id="4_ijml8"]
[ext_resource type="Texture2D" uid="uid://cvum3lwowkhet" path="res://assets/ground_horse_Track.png" id="4_n412l"]

[sub_resource type="Animation" id="Animation_ijml8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_n412l"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 32, 32), Rect2(0, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8sor"]
_data = {
&"RESET": SubResource("Animation_ijml8"),
&"running": SubResource("Animation_n412l")
}

[sub_resource type="Animation" id="Animation_756bc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(32, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_8q2qp"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(32, 0, 32, 32), Rect2(32, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mhi84"]
_data = {
&"RESET": SubResource("Animation_756bc"),
&"running": SubResource("Animation_8q2qp")
}

[sub_resource type="Animation" id="Animation_53grf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(64, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_sibau"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(64, 0, 32, 32), Rect2(64, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qgeub"]
_data = {
&"RESET": SubResource("Animation_53grf"),
&"running": SubResource("Animation_sibau")
}

[sub_resource type="Animation" id="Animation_purbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(96, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_djl37"]
resource_name = "running"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(96, 0, 32, 32), Rect2(96, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ygem4"]
_data = {
&"RESET": SubResource("Animation_purbq"),
&"running": SubResource("Animation_djl37")
}

[node name="Horse racing" type="Node2D"]
script = ExtResource("1_ivqbp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2(1.035, 1.035)
transform = Transform2D(1.035, 0, 0, 1.035, 0, 0)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.628019
offset_top = 599.0338
offset_right = 23.0
offset_bottom = 7.6956787
grow_horizontal = 2
grow_vertical = 2
color = Color(0.36903617, 0.5008269, 0.2748355, 1)

[node name="Horse1" type="Sprite2D" parent="."]
position = Vector2(16, 510)
texture = ExtResource("1_1iinc")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Horse1"]
libraries = {
&"": SubResource("AnimationLibrary_l8sor")
}
autoplay = "running"

[node name="Horse2" type="Sprite2D" parent="."]
position = Vector2(16, 550)
texture = ExtResource("1_1iinc")
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Horse2"]
libraries = {
&"": SubResource("AnimationLibrary_mhi84")
}
autoplay = "running"

[node name="Horse3" type="Sprite2D" parent="."]
position = Vector2(16, 585)
texture = ExtResource("1_1iinc")
region_enabled = true
region_rect = Rect2(64, 0, 32, 32)

[node name="Camera2D" type="Camera2D" parent="Horse3"]
texture_filter = 1
position = Vector2(69, -46.405)
zoom = Vector2(3, 3)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 2.0
drag_horizontal_enabled = true
drag_vertical_offset = 0.06
drag_left_margin = 0.44
drag_top_margin = 0.5
drag_right_margin = 0.1
drag_bottom_margin = 0.9
editor_draw_drag_margin = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Horse3"]
libraries = {
&"": SubResource("AnimationLibrary_qgeub")
}
autoplay = "running"

[node name="Horse4" type="Sprite2D" parent="."]
position = Vector2(16, 625)
texture = ExtResource("1_1iinc")
region_enabled = true
region_rect = Rect2(96, 0, 32, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Horse4"]
libraries = {
&"": SubResource("AnimationLibrary_ygem4")
}
autoplay = "running"

[node name="FinishLine" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1200, 573.5)
scale = Vector2(1.6621099, 4.6562505)
texture = ExtResource("3_afx7c")

[node name="Timer" type="Timer" parent="."]

[node name="BackgroundSky" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
position = Vector2(695.5, 322.99997)
scale = Vector2(25.828127, 22.187498)
texture = ExtResource("4_ijml8")

[node name="Horse_track" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(128.5, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background6" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(127, 575)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background7" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(128, 537)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background8" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(128, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background2" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(379, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background9" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(379, 575)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background10" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(379, 538)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background11" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(379, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background3" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(632, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background12" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(632, 576)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background15" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(632, 537.99994)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background16" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(632, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background4" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(885, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background13" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(880, 576)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background17" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(878.99994, 537.99994)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background18" type="Sprite2D" parent="Horse_track"]
z_index = -1
position = Vector2(879, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background5" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1138, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background21" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1386, 613)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background14" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1128, 576)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background22" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1381, 575.99994)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background23" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1379, 538)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background24" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1379, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background19" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1132, 537.99994)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="Background20" type="Sprite2D" parent="Horse_track"]
z_index = -2
position = Vector2(1132, 500)
scale = Vector2(7.9062505, 2.249999)
texture = ExtResource("4_n412l")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -486.0
offset_right = 6.0
offset_bottom = 684.0
color = Color(0.51363814, 0.41221324, 0.28005528, 1)
